Update and rename 2050-09-09-民间传说.markdown to 2030-12-31-民间传说.markdown

--- a/_posts/2030-12-31-民间传说.markdown
+++ b/_posts/2030-12-31-民间传说.markdown
@@ -2,7 +2,7 @@
 layout:     post
 title:      "【置顶】民间传说"
 subtitle:   "不知道放哪，就一直置顶吧"
-date:       2050-09-09
+date:       2030-12-31
 author:     "匿名"
 header-img: "img/民间传说.jpg"
 tags:
@@ -95,3 +95,27 @@ tags:
 在晚自修过程中，首席值班老师会扮成吉吉国王的样子。另外在《十四大典》中的膀胱重量审判景象中，吉吉国王扮演着测量员的角色，是“天秤的守护者”，借由比较学生膀胱与一张数学周周练孰重孰轻来决定学生是否有进入厕所的资格。如果膀胱比试卷重，那么膀胱就会被长着OP头、粥批的上身和崩批后腿的怪物GMR所吞噬。
 
 ![](https://s1.ax1x.com/2023/04/03/pphbHCF.png)
+
+---
+
+## <center> 犬之主 </center>
+
+![p9DDkHf.jpg](https://s1.ax1x.com/2023/05/10/p9DDkHf.jpg)
+
+> “犬之主，自荒野中诞生，却将目光投向人世。自视甚高，机关算尽，然功亏一篑，满盘皆输。如今，该有人承受他的怒火了。”   ——《十四大典》
+
+使“航天基金账款”逐渐增加；受到伤害降低；【“不许迟到！”】使三名我方单位隔离在教室之外，不可主动撤退，攻速大幅降低，并逐渐加速失去生命值；受影响单位在“犬之主”损失一定比例生命时，会恢复正常；第一形态生命值降为0后，获得【档案威慑】，周围我方单位降低攻击速度，并缓慢回复生命值。第二形态下，不再拥有减伤，可被晕眩，且不再释放【“不许迟到！”】。攻击变为远程二连击，且攻击力提升。每隔一段时间释放，【狂暴怒嗥（好像这个不用改）】，使“航天基金账款”快速上升。
+
+附录：十四冢民歌（？）《犬之主》
+
+>You're tough, but it's never been about you. You're free, but cement your feet, a statue
+>
+>Your rules, but you'd rather make up something. You're dead, you were never good for nothing……
+>
+>Your dirt never washed off in an April shower. You're crushed by the weight of those you can't devour
+>
+>You're armed, but the plan never executed. You're shocked that you'd hold a gun and never shoot it……
+>
+>All of this to say you lost it all to gain some power。All of this to say you plant a seed and kill the flower
+>
+>All of this to say you talk your way into your silence。All of this is just a ploy to force your hand to violence……
